android: move cfg back to selected folder; always keep GamePath/SavePath/ShaderPath syncing; limit all other picked file must residue inside single resource file

--- a/android/app/src/main/res/values-zh-rCN/strings.xml
+++ b/android/app/src/main/res/values-zh-rCN/strings.xml
@@ -22,6 +22,7 @@
     <string name="action_stereo">立体声</string>
     <string name="msg_crash">上次程序异常退出，已显示设置页供您检查设置是否正确。</string>
     <string name="msg_empty">必须指定游戏资源文件夹！</string>
+    <string name="msg_path_unsuitable">该文件必须存放于资源文件夹内!</string>
     <string name="msg_exit">您的设置已保存，下次启动时将直接开始游戏。在游戏中，您可以通过游戏系统菜单中的返回设置选项回到本设置页面。</string>
     <string name="action_restore">撤销修改</string>
     <string name="label_loglevel">日志记录级别</string>
